--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         
         <section class="input-section">
             <h2 class="section-title">Digite el nombre de sus amigos</h2>
-            <div class="input-wrapper">
-                <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
+            <div class="input-wrapper" onkeydown="if(event.key === 'Enter') agregarAmigo()">
+                <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre" >
                 <button class="button-add" onclick="agregarAmigo()">Añadir</button>
             </div>
            
